[gd_scene load_steps=36 format=2]

[ext_resource path="res://assets/GUI/BattleSystem/forward_run pressed.png" type="Texture" id=1]
[ext_resource path="res://assets/Scenes/Battles/3/Battle.gd" type="Script" id=2]
[ext_resource path="res://assets/Scenes/Battles/3/bandit_leader_render.ogv" type="VideoStream" id=3]
[ext_resource path="res://assets/GUI/BattleSystem/HPbar_empty.png" type="Texture" id=4]
[ext_resource path="res://assets/GUI/BattleSystem/HPbar_full.png" type="Texture" id=5]
[ext_resource path="res://assets/GUI/BattleSystem/StaminaBar_empty.png" type="Texture" id=6]
[ext_resource path="res://assets/GUI/BattleSystem/Stamina_bar_full.png" type="Texture" id=7]
[ext_resource path="res://assets/GUI/BattleSystem/back_run.png" type="Texture" id=8]
[ext_resource path="res://assets/GUI/BattleSystem/jump_back.png" type="Texture" id=9]
[ext_resource path="res://assets/GUI/BattleSystem/forward_walk.png" type="Texture" id=10]
[ext_resource path="res://assets/GUI/BattleSystem/forward_run.png" type="Texture" id=11]
[ext_resource path="res://assets/GUI/BattleSystem/skip pressed.png" type="Texture" id=12]
[ext_resource path="res://assets/GUI/BattleSystem/jump_forward.png" type="Texture" id=13]
[ext_resource path="res://assets/GUI/BattleSystem/skip.png" type="Texture" id=14]
[ext_resource path="res://assets/GUI/GUI.tscn" type="PackedScene" id=15]
[ext_resource path="res://assets/GUI/BattleSystem/forward_run hover.png" type="Texture" id=16]
[ext_resource path="res://assets/GUI/BattleSystem/jump_back hover.png" type="Texture" id=17]
[ext_resource path="res://assets/GUI/BattleSystem/skip hover.png" type="Texture" id=18]
[ext_resource path="res://assets/GUI/fonts/impact.ttf" type="DynamicFontData" id=19]
[ext_resource path="res://assets/GUI/BattleSystem/back_run pressed.png" type="Texture" id=20]
[ext_resource path="res://assets/GUI/BattleSystem/forward_walk hover.png" type="Texture" id=21]
[ext_resource path="res://assets/GUI/BattleSystem/jump_forward pressed.png" type="Texture" id=22]
[ext_resource path="res://assets/GUI/BattleSystem/back_run hover.png" type="Texture" id=23]
[ext_resource path="res://assets/GUI/BattleSystem/jump_back pressed.png" type="Texture" id=24]
[ext_resource path="res://assets/GUI/BattleSystem/forward_walk pressed.png" type="Texture" id=25]
[ext_resource path="res://assets/GUI/BattleSystem/jump_forward hover.png" type="Texture" id=26]

[sub_resource type="DynamicFont" id=1]
size = 46
use_filter = true
extra_spacing_char = 6
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=2]
size = 46
use_filter = true
extra_spacing_char = 6
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=3]
size = 46
use_filter = true
extra_spacing_char = 6
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=5]
size = 35
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=6]
size = 60
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=7]
size = 46
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=8]
size = 46
use_filter = true
font_data = ExtResource( 19 )

[sub_resource type="DynamicFont" id=9]
size = 30
use_filter = true
font_data = ExtResource( 19 )

[node name="Battle" type="Node"]
script = ExtResource( 2 )

[node name="base" type="Node2D" parent="."]

[node name="VideoPlayer" type="VideoPlayer" parent="base"]
margin_right = 1919.0
margin_bottom = 1091.0
stream = ExtResource( 3 )
autoplay = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="btn" type="Control" parent="base"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="atk" type="MenuButton" parent="base/btn"]
anchor_left = 0.217
anchor_top = 0.77
anchor_right = 0.317
anchor_bottom = 0.83
margin_left = 671.664
margin_top = 803.598
margin_right = 764.664
margin_bottom = 866.598
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 1 )
text = "ATK"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="act" type="MenuButton" parent="base/btn"]
anchor_left = 0.45
anchor_top = 0.77
anchor_right = 0.55
anchor_bottom = 0.83
margin_left = 1055.47
margin_top = 803.598
margin_right = 1148.47
margin_bottom = 866.598
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 2 )
text = "ACT"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="use" type="MenuButton" parent="base/btn"]
visible = false
anchor_left = 0.683
anchor_top = 0.77
anchor_right = 0.783
anchor_bottom = 0.83
margin_left = 1284.68
margin_top = 801.2
margin_right = 1372.68
margin_bottom = 861.8
mouse_default_cursor_shape = 2
custom_fonts/font = SubResource( 3 )
text = "USE"
flat = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run_forward" type="TextureButton" parent="base/btn"]
margin_left = 400.0
margin_top = 696.0
margin_right = 1253.0
margin_bottom = 1550.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 1 )
texture_hover = ExtResource( 16 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="run_backward" type="TextureButton" parent="base/btn"]
margin_left = 400.0
margin_top = 896.0
margin_right = 1253.0
margin_bottom = 1750.0
rect_scale = Vector2( 0.15, 0.15 )
texture_normal = ExtResource( 8 )
texture_pressed = ExtResource( 20 )
texture_hover = ExtResource( 23 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="jump_forward" type="TextureButton" parent="base/btn"]
margin_left = 848.0
margin_top = 696.0
margin_right = 976.0
margin_bottom = 824.0
texture_normal = ExtResource( 13 )
texture_pressed = ExtResource( 22 )
texture_hover = ExtResource( 26 )
expand = true

[node name="jump_backward" type="TextureButton" parent="base/btn"]
margin_left = 848.0
margin_top = 904.0
margin_right = 976.0
margin_bottom = 1032.0
texture_normal = ExtResource( 9 )
texture_pressed = ExtResource( 24 )
texture_hover = ExtResource( 17 )
expand = true

[node name="go_forward" type="TextureButton" parent="base/btn"]
margin_left = 1296.0
margin_top = 696.0
margin_right = 1424.0
margin_bottom = 824.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="go_backward" type="TextureButton" parent="base/btn"]
margin_left = 1296.0
margin_top = 904.0
margin_right = 1424.0
margin_bottom = 1032.0
texture_normal = ExtResource( 10 )
texture_pressed = ExtResource( 25 )
texture_hover = ExtResource( 21 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="skip" type="TextureButton" parent="base/btn"]
margin_left = 1568.0
margin_top = 800.0
margin_right = 1696.0
margin_bottom = 928.0
texture_normal = ExtResource( 14 )
texture_pressed = ExtResource( 12 )
texture_hover = ExtResource( 18 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="UI" type="Control" parent="base"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_Label" type="Label" parent="base/UI"]
anchor_left = 0.383
anchor_top = 0.059
anchor_right = 0.566
anchor_bottom = 0.128
margin_left = 720.68
margin_top = 61.64
margin_right = 1065.36
margin_bottom = 132.88
custom_fonts/font = SubResource( 4 )
text = "NECROMANCER"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHP" type="TextureProgress" parent="base/UI"]
anchor_left = 0.033
anchor_top = 0.533
anchor_right = 0.067
anchor_bottom = 0.83
margin_left = 62.68
margin_top = 938.68
margin_right = 508.32
margin_bottom = 976.8
rect_rotation = -90.0412
value = 50.0
texture_under = ExtResource( 4 )
texture_progress = ExtResource( 5 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerHPLabel" type="Label" parent="base/UI"]
anchor_left = 0.033
anchor_top = 0.415
anchor_right = 0.067
anchor_bottom = 0.472
margin_left = 62.68
margin_top = 455.4
margin_right = 125.32
margin_bottom = 497.12
custom_fonts/font = SubResource( 5 )
text = "500"
align = 1
valign = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStamina" type="TextureProgress" parent="base/UI"]
anchor_left = 0.033
anchor_top = 0.533
anchor_right = 0.067
anchor_bottom = 0.83
margin_left = 134.68
margin_top = 938.68
margin_right = 580.32
margin_bottom = 975.8
rect_rotation = -90.0412
value = 50.0
texture_under = ExtResource( 6 )
texture_progress = ExtResource( 7 )
nine_patch_stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerStaminaLabel" type="Label" parent="base/UI"]
anchor_left = 0.071
anchor_top = 0.415
anchor_right = 0.104
anchor_bottom = 0.474
margin_left = 125.16
margin_top = 455.4
margin_right = 187.84
margin_bottom = 497.04
custom_fonts/font = SubResource( 5 )
text = "500"
align = 1
valign = 2
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Enemy_condition" type="Label" parent="base/UI"]
margin_left = 1152.0
margin_top = 64.0
margin_right = 1536.0
margin_bottom = 138.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 1, 0.0235294, 0, 1 )
text = "Very Good"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Distance" type="Control" parent="base/UI"]
anchor_left = 1.6
anchor_top = 6.4
anchor_right = 12.8
anchor_bottom = 11.2
margin_bottom = -3.05176e-05
size_flags_horizontal = 4
size_flags_vertical = 4
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strict" type="Label" parent="base/UI/Distance"]
anchor_right = 0.6
anchor_bottom = 0.333
margin_bottom = 0.0639992
custom_fonts/font = SubResource( 7 )
text = "DISTANCE:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strict2" type="Label" parent="base/UI/Distance"]
anchor_top = 0.333
anchor_right = 0.6
anchor_bottom = 0.667
margin_top = 0.0639954
margin_bottom = -0.0640106
custom_fonts/font = SubResource( 7 )
text = "YOUR DMG:"
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Strict3" type="Label" parent="base/UI/Distance"]
anchor_top = 0.667
anchor_right = 0.429
anchor_bottom = 1.0
margin_top = -0.0639954
margin_right = 25.808
margin_bottom = 3.05176e-05
custom_fonts/font = SubResource( 8 )
text = "ENEMY DMG:"

[node name="Distance" type="Label" parent="base/UI/Distance"]
anchor_left = 0.429
anchor_right = 1.229
anchor_bottom = 0.333
margin_left = 31.808
margin_right = 31.808
margin_bottom = 0.0639992
focus_neighbour_left = NodePath("../Strict")
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "CONDITION"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DamageCondition" type="Label" parent="base/UI/Distance"]
anchor_left = 0.429
anchor_top = 0.333
anchor_right = 1.229
anchor_bottom = 0.667
margin_left = 31.808
margin_top = 0.0639954
margin_right = 31.808
margin_bottom = -0.0640106
focus_neighbour_left = NodePath("../Strict2")
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.290196, 1, 0, 1 )
text = "CONDITION"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EnemyDamageCondition" type="Label" parent="base/UI/Distance"]
anchor_left = 0.429
anchor_top = 0.333
anchor_right = 1.229
anchor_bottom = 0.667
margin_left = 31.808
margin_top = 64.064
margin_right = 31.808
margin_bottom = 63.936
focus_neighbour_left = NodePath("../Strict2")
custom_fonts/font = SubResource( 7 )
custom_colors/font_color = Color( 0.290196, 1, 0, 1 )
text = "CONDITION"
valign = 1
clip_text = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="base/UI"]
anchor_left = 35.0
anchor_top = 4.4
anchor_right = 48.0
anchor_bottom = 17.2
margin_top = -8.0
margin_right = -0.00012207
custom_fonts/normal_font = SubResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="player" type="AudioStreamPlayer" parent="base"]

[node name="enemy" type="AudioStreamPlayer" parent="base"]

[node name="GUI" parent="." instance=ExtResource( 15 )]

[node name="Buttons" parent="GUI/VBoxContainer/MarginContainer/BottomMenu" index="0"]
visible = false

[node name="MenuButton" parent="GUI/VBoxContainer/MarginContainer/BottomMenu" index="1"]
visible = false
margin_left = 0.0
margin_right = 80.0

[node name="ExitButton" parent="GUI/VBoxContainer/MarginContainer/BottomMenu" index="2"]
visible = false
margin_left = 0.0
margin_right = 80.0

[node name="EmptySpace" parent="GUI/VBoxContainer/MarginContainer/BottomMenu" index="3"]
margin_left = 0.0
margin_right = 958.0

[node name="EmptySpace2" parent="GUI/VBoxContainer/MarginContainer/BottomMenu" index="4"]
margin_left = 962.0

[node name="Button" parent="GUI/VBoxContainer/MarginContainer/BottomMenu/EmptySpace2" index="0"]
margin_left = 665.0
margin_right = 891.0

[node name="Control" parent="GUI/VBoxContainer/MarginContainer/BottomMenu/EmptySpace2" index="1"]
margin_left = 895.0
margin_right = 958.0
[connection signal="finished" from="base/VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="base/btn/run_forward" to="." method="_on_run_forward_pressed"]
[connection signal="pressed" from="base/btn/run_backward" to="." method="_on_run_backward_pressed"]
[connection signal="pressed" from="base/btn/jump_forward" to="." method="_on_jump_forward_pressed"]
[connection signal="pressed" from="base/btn/jump_backward" to="." method="_on_jump_backward_pressed"]
[connection signal="pressed" from="base/btn/go_forward" to="." method="_on_go_forward_pressed"]
[connection signal="pressed" from="base/btn/go_backward" to="." method="_on_go_backward_pressed"]
[connection signal="pressed" from="base/btn/skip" to="." method="_on_skip_pressed"]

[editable path="GUI"]
